# backend/docs/swagger.json
@@ -1443,10 +1443,8 @@
             "properties": {
                 "deceasedreceives": {
                     "description": "Deceasedreceives holds the value of the deceasedreceives edge.",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/ent.DeceasedReceive"
-                    }
+                    "type": "object",
+                    "$ref": "#/definitions/ent.DeceasedReceive"
                 }
             }
         },
